--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,4 @@
-.htaccess
-css.php
-rpc/
-sites/site*/admin/
-sites/site*/private/
-sites/site*/public/admin/
-sites/site*/public/setup/
-sites/site*/public/theme/
-textpattern/
-HISTORY.txt
-README.txt
+put yours api_key 
+put yours api_secret_key 
+put yours access_token
+put yours access_token_secret
